--- a/Lab2/Lab2_proj/ClientPart/mainwindow.ui
+++ b/Lab2/Lab2_proj/ClientPart/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>467</width>
-    <height>270</height>
+    <width>1980</width>
+    <height>1080</height>
    </rect>
   </property>
   <property name="maximumSize">
@@ -63,52 +63,82 @@
        </property>
        <property name="styleSheet">
         <string notr="true">#LoginMenu{
-	background-color:qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0.0842697 rgba(13, 13, 13, 255), stop:0.353933 rgba(18, 18, 18, 255), stop:0.617978 rgba(18, 18, 18, 255), stop:1 rgba(13, 13, 13, 255));
+  background-color:qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(18, 18, 18, 255), stop:0.47191 rgba(0, 25, 26, 255), stop:1 rgba(18, 18, 18, 255));
 }
 
 
+QCheckBox::indicator:checked {
+  border-radius:6px;
+    background: #1C9950;
+}
+
+QCheckBox::indicator:unchecked {
+  border-radius:6px;
+    background:#990329;
+}
+
+QCheckBox::indicator:checked:hover {
+  border: 2px solid #1C9950;
+  border-radius:6px;
+    background: #178043;
+}
+
+QCheckBox::indicator:unchecked:hover {
+  border: 2px solid #990329;
+  border-radius:6px;
+    background:#800322;
+}
+
+
+
+QCheckBox {
+    color:#999999;
+  font: italic 9pt &quot;Open Sans Light&quot;;
+
+}
+
 QLineEdit{
-	background-color:#343434 ;
+  background-color:#3D3D3D ;
 
- 	border-style: solid;
+   border-style: solid;
     border-width: 2px;
-    border-color: #343434;
- 	border-radius: 10px;
+    border-color: #3D3D3D;
+   border-radius: 10px;
 
-	color:#CCCCCC;
-	font-family: &quot;Open Sans Light&quot;;
-	font-size: 15px;
+  color:#CCCCCC;
+  font-family: &quot;Open Sans Light&quot;;
+  font-size: 15px;
 
-	padding-left:10px;
-	padding-right:10px;
+  padding-left:10px;
+  padding-right:10px;
 }
 
 
 QLineEdit:hover{
-	
-	background-color: #262626;
+  
+  background-color: #262626;
 
-	
-	
- 	border-style: solid;
+  
+  
+   border-style: solid;
     border-width: 2px;
     border-color: #017374;
- 	border-radius: 10px;
+   border-radius: 10px;
 
 
 
 }
 
 QLineEdit:focus{
-	
-	background-color: #1D1D1D;
+  
+  background-color: #1D1D1D;
 
-	
-	
- 	border-style: solid;
+  
+  
+   border-style: solid;
     border-width: 2px;
     border-color: #019592;
- 	border-radius: 10px;
+   border-radius: 10px;
 
 
 
@@ -177,7 +207,7 @@ QLineEdit:focus{
            </spacer>
           </item>
           <item row="1" column="1">
-           <layout class="QGridLayout" name="gridLayout_2" rowstretch="0,5,8">
+           <layout class="QGridLayout" name="gridLayout_2" rowstretch="0,6,8">
             <property name="spacing">
              <number>0</number>
             </property>
@@ -279,7 +309,7 @@ QLineEdit:focus{
                 <property name="maximumSize">
                  <size>
                   <width>300</width>
-                  <height>45</height>
+                  <height>55</height>
                  </size>
                 </property>
                 <property name="styleSheet">
@@ -353,7 +383,7 @@ QLineEdit:focus{
              </layout>
             </item>
             <item row="1" column="0">
-             <layout class="QGridLayout" name="gridLayout_7" rowstretch="1,5,5">
+             <layout class="QGridLayout" name="gridLayout_7" rowstretch="1,11,11,0">
               <property name="leftMargin">
                <number>0</number>
               </property>
@@ -388,6 +418,35 @@ QLineEdit:focus{
                 </property>
                 <property name="placeholderText">
                  <string>Password</string>
+                </property>
+               </widget>
+              </item>
+              <item row="0" column="0">
+               <spacer name="verticalSpacer_7">
+                <property name="orientation">
+                 <enum>Qt::Vertical</enum>
+                </property>
+                <property name="sizeHint" stdset="0">
+                 <size>
+                  <width>0</width>
+                  <height>0</height>
+                 </size>
+                </property>
+               </spacer>
+              </item>
+              <item row="3" column="0">
+               <widget class="QCheckBox" name="RemMeCheckBox">
+                <property name="sizePolicy">
+                 <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+                  <horstretch>0</horstretch>
+                  <verstretch>0</verstretch>
+                 </sizepolicy>
+                </property>
+                <property name="text">
+                 <string>Remember me</string>
+                </property>
+                <property name="checked">
+                 <bool>false</bool>
                 </property>
                </widget>
               </item>
@@ -445,19 +504,6 @@ QLineEdit:focus{
                  <string>Login</string>
                 </property>
                </widget>
-              </item>
-              <item row="0" column="0">
-               <spacer name="verticalSpacer_7">
-                <property name="orientation">
-                 <enum>Qt::Vertical</enum>
-                </property>
-                <property name="sizeHint" stdset="0">
-                 <size>
-                  <width>0</width>
-                  <height>0</height>
-                 </size>
-                </property>
-               </spacer>
               </item>
              </layout>
             </item>
