--- a/Lab2/Lab2_proj/ClientPart/mainwindow.ui
+++ b/Lab2/Lab2_proj/ClientPart/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1980</width>
-    <height>1080</height>
+    <width>952</width>
+    <height>540</height>
    </rect>
   </property>
   <property name="maximumSize">
@@ -62,86 +62,93 @@
         </font>
        </property>
        <property name="styleSheet">
-        <string notr="true">#LoginMenu{
+        <string notr="true">/*--------------------------------Backdround color--------------------------------*/
+#LoginMenu{
   background-color:qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(18, 18, 18, 255), stop:0.47191 rgba(0, 25, 26, 255), stop:1 rgba(18, 18, 18, 255));
 }
+/*--------------------------------Button--------------------------------*/
 
+QPushButton{
+	
+	background-color: #383838;
+	
+	border: 2px solid #1D1D1D;
+	border-radius:10px;
+
+
+	color:#CCCCCC;
+	font-family: &quot;Open Sans Light&quot;;
+	font-size: 15px;
+
+}
+
+QPushButton:hover:!pressed{
+	
+	background-color: #005457;
+	
+	
+}
+
+/*--------------------------------Check box--------------------------------*/
+QCheckBox {
+	color:#999999;
+	font: italic 9pt &quot;Open Sans Light&quot;;
+	border-radius:6px;
+}
 
 QCheckBox::indicator:checked {
-  border-radius:6px;
-    background: #1C9950;
+    background: #198C49;
+	border-radius:6px;
 }
 
 QCheckBox::indicator:unchecked {
-  border-radius:6px;
     background:#990329;
+	border-radius:6px;
 }
 
 QCheckBox::indicator:checked:hover {
-  border: 2px solid #1C9950;
-  border-radius:6px;
-    background: #178043;
+  	border: 2px solid #198C49;
+    background: #15733C;
+	border-radius:6px;
 }
 
 QCheckBox::indicator:unchecked:hover {
-  border: 2px solid #990329;
-  border-radius:6px;
-    background:#800322;
+	border: 2px solid #990329;
+	background:#800322;
+	border-radius:6px;
 }
 
+/*--------------------------------Line edit--------------------------------*/
 
 
-QCheckBox {
-    color:#999999;
-  font: italic 9pt &quot;Open Sans Light&quot;;
-
-}
 
 QLineEdit{
-  background-color:#3D3D3D ;
+	background-color:#303030 ;
 
-   border-style: solid;
-    border-width: 2px;
-    border-color: #3D3D3D;
-   border-radius: 10px;
+	border-style: solid;
+	border-width: 2px;
+	border-color: #525252;
+	border-radius: 10px;
 
-  color:#CCCCCC;
-  font-family: &quot;Open Sans Light&quot;;
-  font-size: 15px;
+	color:#CCCCCC;
+	font-family: &quot;Open Sans Light&quot;;
+	font-size: 15px;
 
-  padding-left:10px;
-  padding-right:10px;
+	padding-left:10px;
+	padding-right:10px;
 }
 
 
 QLineEdit:hover{
-  
-  background-color: #262626;
-
-  
-  
-   border-style: solid;
-    border-width: 2px;
+	background-color: #262626;
+ 
     border-color: #017374;
-   border-radius: 10px;
-
-
-
 }
 
 QLineEdit:focus{
-  
-  background-color: #1D1D1D;
+	background-color: #1D1D1D;
 
-  
-  
-   border-style: solid;
-    border-width: 2px;
-    border-color: #019592;
-   border-radius: 10px;
-
-
-
+	border-color: #00B3A6;
 }</string>
        </property>
        <layout class="QVBoxLayout" name="verticalLayout_4" stretch="0">
@@ -161,7 +168,7 @@ QLineEdit:focus{
          <number>0</number>
         </property>
         <item>
-         <layout class="QGridLayout" name="gridLayout_6" rowstretch="1,1,1">
+         <layout class="QGridLayout" name="gridLayout_6" rowstretch="2,3,3">
           <property name="leftMargin">
            <number>5</number>
           </property>
@@ -212,7 +219,7 @@ QLineEdit:focus{
              <number>0</number>
             </property>
             <item row="2" column="0">
-             <layout class="QGridLayout" name="gridLayout_9" rowstretch="10,10,10,1">
+             <layout class="QGridLayout" name="gridLayout_9" rowstretch="15,15,15,1">
               <property name="leftMargin">
                <number>0</number>
               </property>
@@ -238,108 +245,6 @@ QLineEdit:focus{
                 </property>
                 <property name="sizeType">
                  <enum>QSizePolicy::Expanding</enum>
-                </property>
-                <property name="sizeHint" stdset="0">
-                 <size>
-                  <width>0</width>
-                  <height>0</height>
-                 </size>
-                </property>
-               </spacer>
-              </item>
-              <item row="0" column="1">
-               <widget class="QPushButton" name="RegButton">
-                <property name="sizePolicy">
-                 <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-                  <horstretch>0</horstretch>
-                  <verstretch>0</verstretch>
-                 </sizepolicy>
-                </property>
-                <property name="minimumSize">
-                 <size>
-                  <width>100</width>
-                  <height>27</height>
-                 </size>
-                </property>
-                <property name="maximumSize">
-                 <size>
-                  <width>300</width>
-                  <height>55</height>
-                 </size>
-                </property>
-                <property name="baseSize">
-                 <size>
-                  <width>0</width>
-                  <height>0</height>
-                 </size>
-                </property>
-                <property name="font">
-                 <font>
-                  <family>MS Shell Dlg 2</family>
-                  <weight>50</weight>
-                  <italic>false</italic>
-                  <bold>false</bold>
-                 </font>
-                </property>
-                <property name="contextMenuPolicy">
-                 <enum>Qt::DefaultContextMenu</enum>
-                </property>
-                <property name="styleSheet">
-                 <string notr="true"/>
-                </property>
-                <property name="text">
-                 <string>Register</string>
-                </property>
-               </widget>
-              </item>
-              <item row="1" column="1">
-               <widget class="QPushButton" name="LogButton">
-                <property name="sizePolicy">
-                 <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-                  <horstretch>0</horstretch>
-                  <verstretch>0</verstretch>
-                 </sizepolicy>
-                </property>
-                <property name="minimumSize">
-                 <size>
-                  <width>100</width>
-                  <height>27</height>
-                 </size>
-                </property>
-                <property name="maximumSize">
-                 <size>
-                  <width>300</width>
-                  <height>55</height>
-                 </size>
-                </property>
-                <property name="styleSheet">
-                 <string notr="true"/>
-                </property>
-                <property name="text">
-                 <string>Login</string>
-                </property>
-               </widget>
-              </item>
-              <item row="1" column="2">
-               <spacer name="horizontalSpacer_9">
-                <property name="orientation">
-                 <enum>Qt::Horizontal</enum>
-                </property>
-                <property name="sizeType">
-                 <enum>QSizePolicy::Expanding</enum>
-                </property>
-                <property name="sizeHint" stdset="0">
-                 <size>
-                  <width>0</width>
-                  <height>0</height>
-                 </size>
-                </property>
-               </spacer>
-              </item>
-              <item row="1" column="0">
-               <spacer name="horizontalSpacer_8">
-                <property name="orientation">
-                 <enum>Qt::Horizontal</enum>
                 </property>
                 <property name="sizeHint" stdset="0">
                  <size>
@@ -377,6 +282,109 @@ QLineEdit:focus{
                 </property>
                 <property name="text">
                  <string>Exit</string>
+                </property>
+               </widget>
+              </item>
+              <item row="1" column="0">
+               <spacer name="horizontalSpacer_8">
+                <property name="orientation">
+                 <enum>Qt::Horizontal</enum>
+                </property>
+                <property name="sizeHint" stdset="0">
+                 <size>
+                  <width>0</width>
+                  <height>0</height>
+                 </size>
+                </property>
+               </spacer>
+              </item>
+              <item row="1" column="2">
+               <spacer name="horizontalSpacer_9">
+                <property name="orientation">
+                 <enum>Qt::Horizontal</enum>
+                </property>
+                <property name="sizeType">
+                 <enum>QSizePolicy::Expanding</enum>
+                </property>
+                <property name="sizeHint" stdset="0">
+                 <size>
+                  <width>0</width>
+                  <height>0</height>
+                 </size>
+                </property>
+               </spacer>
+              </item>
+              <item row="1" column="1">
+               <widget class="QPushButton" name="RegButton">
+                <property name="sizePolicy">
+                 <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+                  <horstretch>0</horstretch>
+                  <verstretch>0</verstretch>
+                 </sizepolicy>
+                </property>
+                <property name="minimumSize">
+                 <size>
+                  <width>100</width>
+                  <height>27</height>
+                 </size>
+                </property>
+                <property name="maximumSize">
+                 <size>
+                  <width>300</width>
+                  <height>55</height>
+                 </size>
+                </property>
+                <property name="baseSize">
+                 <size>
+                  <width>0</width>
+                  <height>0</height>
+                 </size>
+                </property>
+                <property name="font">
+                 <font>
+                  <family>Open Sans Light</family>
+                  <pointsize>-1</pointsize>
+                  <weight>50</weight>
+                  <italic>false</italic>
+                  <bold>false</bold>
+                 </font>
+                </property>
+                <property name="contextMenuPolicy">
+                 <enum>Qt::DefaultContextMenu</enum>
+                </property>
+                <property name="styleSheet">
+                 <string notr="true"/>
+                </property>
+                <property name="text">
+                 <string>Register</string>
+                </property>
+               </widget>
+              </item>
+              <item row="0" column="1">
+               <widget class="QPushButton" name="LogButton">
+                <property name="sizePolicy">
+                 <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+                  <horstretch>0</horstretch>
+                  <verstretch>0</verstretch>
+                 </sizepolicy>
+                </property>
+                <property name="minimumSize">
+                 <size>
+                  <width>100</width>
+                  <height>27</height>
+                 </size>
+                </property>
+                <property name="maximumSize">
+                 <size>
+                  <width>300</width>
+                  <height>55</height>
+                 </size>
+                </property>
+                <property name="styleSheet">
+                 <string notr="true"/>
+                </property>
+                <property name="text">
+                 <string>Login</string>
                 </property>
                </widget>
               </item>
