--- a/Lab2/Lab2_proj/ClientPart/mainwindow.ui
+++ b/Lab2/Lab2_proj/ClientPart/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1411</width>
+    <width>1200</width>
     <height>817</height>
    </rect>
   </property>
@@ -24,6 +24,9 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QHBoxLayout" name="horizontalLayout_3">
+    <property name="spacing">
+     <number>0</number>
+    </property>
     <property name="leftMargin">
      <number>0</number>
     </property>
@@ -39,7 +42,7 @@
     <item>
      <widget class="QStackedWidget" name="stackedWidget">
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="LoginMenu">
        <property name="sizePolicy">
@@ -64,25 +67,29 @@
        <property name="styleSheet">
         <string notr="true">/*--------------------------------Backdround color--------------------------------*/
 #LoginMenu{
-  background-color:qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(18, 18, 18, 255), stop:0.47191 rgba(0, 25, 26, 255), stop:1 rgba(18, 18, 18, 255));
+  background-color:qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(18, 18, 18, 255), stop:0.47191 rgba(4, 20, 11, 255), stop:1 rgba(18, 18, 18, 255));
 }
 /*--------------------------------Button--------------------------------*/
 
 QPushButton{
 	
-	background-color: #383838;
+	background-color: #2C2C2C;
 	
-	border: 2px solid #1D1D1D;
+	border: 2px solid #111111;
 	border-radius:10px;
 
-	color:#CCCCCC;
+	color:#B9B9B9;
 	font-family: &quot;Open Sans Light&quot;;
 	font-size: 15px;
 
 }
 
 QPushButton:hover:!pressed{
-	background-color: #005457;
+	background-color: #136836;
+}
+
+QPushButton:hover:pressed{
+	background-color: #082E18;
 }
 
 /*--------------------------------Check box--------------------------------*/
@@ -117,11 +124,11 @@ QCheckBox::indicator:unchecked:hover {
 /*--------------------------------Line edit--------------------------------*/
 
 QLineEdit{
-	background-color:#303030 ;
+	background-color:#262626 ;
 
 	border-style: solid;
 	border-width: 2px;
-	border-color: #525252;
+	border-color: #565656;
 	border-radius: 10px;
 
 	color:#CCCCCC;
@@ -134,15 +141,15 @@ QLineEdit{
 
 
 QLineEdit:hover{
-	background-color: #262626;
+	background-color: #212121;
  
-    border-color: #017374;
+    border-color: #115C30;
 }
 
 QLineEdit:focus{
-	background-color: #1D1D1D;
+	background-color: #1A1A1A;
 
-	border-color: #00B3A6;
+	border-color: #15733C;
 }
 </string>
        </property>
